Dark Mode fix

--- a/src/Components/Layout/Navbar/Navbar.scss
+++ b/src/Components/Layout/Navbar/Navbar.scss
@@ -209,6 +209,7 @@
                     font-size: 22px;
                     cursor: pointer;
                     background-color: var(--primary-color);
+                    color: #1e1e1e !important;
                     border-radius: 50%;
                     width: 22px;
                     height: 22px;
